force-app/main/default/objects/Channel_Score_Timeline__c/Channel_Score_Timeline__c.object-meta.xml
<CustomObject>
    <label>Channel Score Timeline</label>
    <nameField>
        <displayFormat>CID-{0000}</displayFormat>
        <label>Channel Score Timeline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Score Timeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>