force-app/main/default/objects/Channel_Score_Timeline__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Channel Score Timeline</relationshipLabel>
    <relationshipName>Channel_Score_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>