force-app/main/default/objects/Channel_Score_Timeline__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>