force-app/main/default/objects/Channel_Score_Timeline__c/fields/Channel_Score__c.field-meta.xml
<CustomField>
    <fullName>Channel_Score__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Score</label>
    <referenceTo>Contact_Channel_Score__c</referenceTo>
    <relationshipLabel>Channel Score Timeline</relationshipLabel>
    <relationshipName>Channel_Score_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>