force-app/main/default/objects/Channel_Score_Timeline__c/fields/Contact_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact/Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Channel Score Timeline</relationshipLabel>
    <relationshipName>Channel_Score_Timeline</relationshipName>
    <type>Lookup</type>
</CustomField>